--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
-meta_product_name: "Product Name"
-meta_title: "Product name - Product tagline"
-meta_description: "Relevant description"
+meta_product_name: "Chargesharing"
+meta_title: "ChargeSharing - Book a charger for your car"
+meta_description: "realy interesting description for anybody that wants to book a charger for his car"
 meta_image: "cover2.png" # should exist in `app/assets/images/`
 twitter_account: "@product_twitter_account"   # required for Twitter Cards
